--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,12 @@
 Revision history for C and Perl extension of nfdump.
 
 1.08 2015-05-xx
+	- c: removed memory leak in original nfdump in LZO 
 	- c: initial number of buckets in hash table increased to 500000
 	- c: new functions lnf_mem_read_raw, lnf_mem_write_raw added
 	- c: examples/lnf_ex05_memtrans added
 	- c: examples/lnf_ex04_threads option -n added 
+	- perl: removed memory leak in perl API 
 	- perl: nfasnupd accepts -c <file> with additional prefix database 
 
 1.07 2015-03-17
