--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ Revision history for C and Perl extension of nfdump.
 	- c: removed memory leak in original nfdump in LZO 
 	- c: initial number of buckets in hash table increased to 500000
 	- c: new functions lnf_mem_read_raw, lnf_mem_write_raw added
+	- c: examples/lnf_ex06_readreset added
 	- c: examples/lnf_ex05_memtrans added
 	- c: examples/lnf_ex04_threads option -n added 
 	- perl: removed memory leak in perl API 
