--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ Revision history for C and Perl extension of nfdump.
 
 1.10 2015-06-xx
 	- c: aggregation unit supports statistics 
-	- c: new pair fields LNF_FLD_PAIR_PORT|ADDR|AS|IF
+	- c: new pair fields LNF_FLD_PAIR_PORT|ADDR|AS|IF|VLAN
 	- c: examples/lnf_ex08_statistics added 
 
 1.09 2015-05-28
