--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 Revision history for C and Perl extension of nfdump.
 
 1.11 2015-07-xx
-	- 
+	- perl: removed issues with thread support in perl 
 
 1.10 2015-06-30
 	- Project entered into close cooperation with 
