--- a/ChangeLog
+++ b/ChangeLog
@@ -6,13 +6,14 @@ Revision history for C and Perl extension of nfdump.
 	  lnf_mem_read_raw_c
 	- c: functions lnf_mem_read, lnf_mem_read_raw,
 	  lnf_mem_read_reset marked as deprecated
-	- c: examples redesigned to use lnf_mem functions 
+	- c: examples redesigned to use new lnf_mem functions 
 	- c: libnf.h was not installed by default (thanks to Tomas Cejka)
 	- c: removed memory release bug in merge_threads
 	- perl: added new test 52-libnf-examples.t to test examples 
 	- perl: t/08-aggreg-sort.t was missing in distribution package 
 	- perl: Socket6 module is not required starting with perl 5.14.0 
 	  http://search.cpan.org/~jesse/perl-5.14.0/pod/perldelta.pod#Improved_IPv6_support
+	- perl: buggy implementation of inet_pton in Ubuntu 
 
 1.13 2015-07-08
 	- perl: module requires use of threads 
