prepared for 1.15, lnf_mem_merge_threads redesigned

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for C and Perl extension of nfdump.
 
+1.15 2015-08-xx
+	- c: new function lnf_mem_lookup_c 
+	- C: new example examples/lnf_ex09_memlookup.c 
+
 1.14 2015-07-18
 	- c: new way to work with data in lnf_mem, new functions 
 	  lnf_mem_first_c, lnf_mem_next_c, lnf_mem_read_c,
