--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Revision history for C and Perl extension of nfdump.
 
 1.16 2015-08-xx
+	-c: added license and copyright information 
 	-perl: module allows to sort records without aggregation (list mode)
 	-c: bug when sorting same values (Thanks to Jan Wrona) 
 	-c: libnf-info is compiled statically now (Thanks to Lukas Hutak)
