--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ Revision history for C and Perl extension of nfdump.
 1.17 2015-10-xx
 	-c: LNF_CALC_*PS items returns LNF_ERR_NAN when division by 0 is detected 
 	-c: new flag LNF_APPEND in lnf_open for open file in append mode (not supported by nfdump format)
+	-c: LNF_FLD_INFO_SIZE can be returned by lnf_fld_info
 	-c: added LNF_<type>_T with basic types definitions used by libnf 
 	-c: removed bug when memheap crashes after mixing par and non pair 
 	    fields (Thanks to Jan Wrona)
