--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Revision history for C and Perl extension of nfdump.
 
-1.22 2016-06-28
+1.23 2016-06-20
+	-c: fixed build on FreeBSD
+
+1.22 2016-06-18
 	-c: adjusted to nfdump-1.6.15
 
 1.21 2016-05-28
