--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for C and Perl extension of nfdump.
 
+1.24 2016-06-21
+	-perl: better thread testing (with more detailed results)
+
 1.23 2016-06-20
 	-c: fixed build on FreeBSD
 
