--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@ Revision history for C and Perl extension of nfdump.
 	-c: added exmaple lnf_ex11_memclean.c
 	-perl: added new test 53-libnf-filter.t
 	-nfdumpp: handles properly error messages for libnf filter
+	-nfdumpp: ability ro read binnary format from stdin (nfdumpp -r -)
 
 1.24 2016-06-21
 	-perl: better thread testing (with more detailed results)
