--- a/README
+++ b/README
@@ -48,7 +48,7 @@ INSTALLATION FROM TARBALL
 INSTALLATION FROM GIT REPOSITORY
 ===============================================
 
-1. Get nf-tools git repository 
+1. Get libnf git repository 
 
 	# git clone --recursive https://github.com/VUTBR/libnf
 
@@ -60,7 +60,7 @@ INSTALLATION FROM GIT REPOSITORY
 
 	# ./prepare-nfdump.sh
 
-4. Follow instructions 4. and 5. from TARBALL INSTALLATION
+4. Follow instructions 3., 4. and 5. from TARBALL INSTALLATION
 
 
 
