--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,15 @@
 Revision history for C and Perl extension of nfdump.
 
-1.26 2016-12-xx
-	- c: ringbuf support to handle data beween libnf instances 
+1.26 2018-06-xx
+	- c: better processing of list of exporters 
+	- c: ringbuf support to handle data beween libnf instancec in real time 
 	- c: new functions lnf_ring_init, lnf_ring_info, lnf_ring_read,
 	  lnf_ring_write, lnf_ring_free
 	- c: new examples examples/lnf_ex13_ring_write.c, examples/lnf_ex14_ring_read.c
 	- nfdumpp: new shm (ringbuf) output format (-o shm) 
 	- nfdumpp: new --loop-read option for continuos reading of input file(s)
 	- nfdumpp: new --shm-read option for read data from shm (ringbuf)
+	- perl: perl module is not separate code but part of libnf repository 
 
 1.25 2016-12-04
 	- libnf and modules moved to separate repositories (libnf, libnf-ffilter, libnf-perl)
