initial update to nfdump 1.6.17

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Revision history for C and Perl extension of nfdump.
 
 1.26 2018-06-xx
+	- updated to nfdump 1.6.17
 	- c: better processing of list of exporters 
 	- c: ringbuf support to handle data beween libnf instancec in real time 
 	- c: new functions lnf_ring_init, lnf_ring_info, lnf_ring_read,
