--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,16 @@
 Revision history for C and Perl extension of nfdump.
 
-1.26 2018-06-xx
+1.27 2020-04-xx
+	- after a few years stalled development the library is going to be 
+	  maintained and sponsored by NetX Networks a.s. 
+	- source code moved from original https://github.com/VUTBR/libnf 
+	  to https://github.com/NETX-AS/libnf
+	- updated README 
+	- un-submoduled ffilter code to avoid nigtmare with git submodules 
+	- backported patch https://github.com/VUTBR/libnf/pull/24
+
+
+1.26 2018-06-xx - never released
 	- updated to nfdump 1.6.17
 	- c: better processing of list of exporters 
 	- c: ringbuf support to handle data beween libnf instancec in real time 
