--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 
+[![Maintained by NetX Networks](https://img.shields.io/badge/maintained-NetX%20Networks-blue)](https://netx.as/)
+
 libnf - C interface for processing nfdump files 
 
 
