--- a/perl/README
+++ b/perl/README
@@ -24,7 +24,8 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2012 by Brno University of Technology
+Copyright (C) 2012 - 2019 by Brno University of Technology
+Copyright (C) 2020 by Copyright (C) 2020 by NetX Networks a.s.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
