--- a/perl/Changes
+++ b/perl/Changes
@@ -1,8 +1,14 @@
 Revision history for C and Perl extension of nfdump.
 
+1.31 2022-12-27
+	- updated to nfdump 1.6.25 
+	- probably last version based on nfdump 1.6.x, future version 
+	  will be based on nfdump 1.7.x
+
 1.30 2020-12-22
 	- fixed issue with building ffilter code on FreeBSD
 	- fixed issue when no exporters are configured 
+	- removed memory leask (https://github.com/VUTBR/libnf/issues/14)
 
 1.29 2020-12-20
 	- updated to nfdump 1.6.22
