--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for C and Perl extension of nfdump.
 
+1.36 2025-08-12
+	- fix memory leak in lnf_filter, thanks to @SafarMirek
+
 1.35 2025-07-26
 	- clear lnf_record before storing the values to overcame problems
 	with filters
